server/src/main/java/com/example/cardealership/web/error/MlServiceException.java
package com.example.cardealership.web.error;

public class MlServiceException extends RuntimeException {
    public MlServiceException(String message, Throwable cause) {
        super(message, cause);
    }
}